force-app/main/default/objects/MC4SF__MC_Query__c/MC4SF__MC_Query__c.object-meta.xml
<CustomObject>
    <label>MC Query</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MC Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Queries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>