force-app/main/default/objects/MC4SF__MC_Query__c/fields/MC4SF__Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Campaign_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>