force-app/main/default/objects/MC4SF__MC_Query__c/fields/MC4SF__Contacts_SOQL__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Contacts_SOQL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contacts SOQL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>