force-app/main/default/objects/MC4SF__MC_Query__c/fields/MC4SF__Last_Run__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Last_Run__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>